<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.dag.covidnews.ui.settingspage.SettingsFragmentVM" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:gravity="left"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:textSize="@dimen/medium_text_size"
        android:text="@string/app_language"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/margin_medium"
        android:background="@drawable/bg_radio_group_not_selected"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/turkishButtonBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/bg_radio_button_left_button_selected"
            android:button="@null"
            android:paddingStart="@dimen/padding_small"
            android:text="@string/turkish"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_text_size"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/englishButtonBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:button="@null"
            android:paddingStart="@dimen/padding_small"
            android:text="@string/english"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_text_size" />
    </RadioGroup>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/button_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/margin_medium"
        android:gravity="left"
        android:text="@string/app_countries"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupCG"
        style="@style/Widget.MaterialComponents.ChipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">


        <com.google.android.material.chip.Chip
            android:id="@+id/chipTurkeyC"
            android:checked="false"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turkey" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipUsaC"
            android:checked="false"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usa" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipGermanyC"
            android:checked="false"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/germany" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFranceC"
            android:checked="false"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/france" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipItalyC"
            android:checked="false"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/italy" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipNorwayC"
            android:checked="false"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/norway" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSwedenC"
            android:checked="false"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sweden" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSpainC"
            android:checked="false"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spain" />
    </com.google.android.material.chip.ChipGroup>

    <Button
        android:id="@+id/saveButtonBTN"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        android:text="@string/save"
        android:onClick="@{()->viewModel.saveContent()}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>